--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <h1>My ECS Github Web Page</h1>
 <p>I love ECS!</p>
 <h2>My name is Derek</h2>
-  <a href="realmofthemadgod.com"> This is a link </a>
+
+<a href="google.com"> This is a link </a>
 </body>
 </html>
