--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <p>I love ECS!</p>
 <h2>My name is Derek</h2>
 
-<a href="http://google.com/"> This is a link </a>
+<a href="https://www.google.com/"> This is a link </a>
 </body>
 </html>
