--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <h1>My ECS Github Web Page</h1>
 <p>I love ECS!</p>
+  <p>This is<br>a paragraph<br>with line breaks.</p>
 <h2>My name is Derek</h2>
 
 <a href="https://www.google.com/"> This is a link </a>
