--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <p>I love ECS!</p>
 
 <h2>My name is Derek</h2>
+   <!--This is a comment -->
    <p>This is<br>a paragraph<br>with line breaks.</p>
 
 <a href="https://www.google.com/"> This is a link </a>
