--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <body>
 
 <h1>My ECS Github Web Page</h1>
-<p>I love ECS!</p>
+<p style="color:red;">I love ECS!</p>
 
-<h2>My name is Derek</h2>
+<p><i>My name is Derek!</i></p>
    <!--This is a comment -->
    <p>This is<br>a paragraph<br>with line breaks.</p>
+   <!-- Comments are not displayed in the browser -->
 
 <a href="https://www.google.com/"> This is a link </a>
+</body>
+</html>
+<body>
+
+<img src="img_girl.jpg" width="500" height="600">
+
 </body>
 </html>
