--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <!-- Comments are not displayed in the browser -->
 
 <a href="https://www.google.com/"> This is a link </a>
-</body>
+</body style="background-color:powderblue;">>
 </html>
 <body>
 
