--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>My ECS Github Page</title>
 <body>
 
-<h1>My ECS Github Web Page</h1>
+<h1 style="background-color:powderblue;">My ECS Github Web Page</h1>
 <p style="color:red;">I love ECS!</p>
 
 <p><i>My name is Derek!</i></p>
@@ -12,7 +12,7 @@
    <!-- Comments are not displayed in the browser -->
 
 <a href="https://www.google.com/"> This is a link </a>
-</body style="background-color:powderblue;">>
+</body>
 </html>
 <body>
 
