--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1 style="background-color:powderblue;">My ECS Github Web Page</h1>
 <p style="color:red;">I love ECS!</p>
 
-<p><i>My name is Derek!</i></p>
+<p style="border:2px solid Violet;">My name is Derek!</p>
    <!--This is a comment -->
    <p>This is<br>a paragraph<br>with line breaks.</p>
    <!-- Comments are not displayed in the browser -->
