--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <p>This is<br>a paragraph<br>with line breaks.</p>
    <!-- Comments are not displayed in the browser -->
 
-<a href="https://www.google.com/"> This is a link </a>
+<a href="links.html">Link Exercises </a>
 </body>
 </html>
 <body>
