--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
    <p>This is<br>a paragraph<br>with line breaks.</p>
    <!-- Comments are not displayed in the browser -->
 
-<a href="links.html">Link Exercises </a>
+<a href="https://github.com/Edwiuhgkud/edwiuhgkud.github.io/blob/master/Exercises/links.html">Link Exercises </a>
 </body>
 </html>
 <body>
 
-<img src="img_girl.jpg" width="500" height="600">
+<img src="https://www.blog.google/static/blog/images/google-200x200.7714256da16f.png" alt="Google" width="50" height="60"
 
 </body>
 </html>
