--- a/Exercises/links.html
+++ b/Exercises/links.html
@@ -7,4 +7,8 @@
 <p>This is a paragraph.</p>
 
 </body>
+  <a href="https://edwiuhgkud.github.io/">
+    <img src="https://www.blog.google/static/blog/images/google-200x200.7714256da16f.png" alt="Google" 
+         style="width:100px;height:100px;border:0;">
+         
 </html>
