--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <p>This is<br>a paragraph<br>with line breaks.</p>
    <!-- Comments are not displayed in the browser -->
 
-<a href="edwiuhgkud.github.io/Exercises/links.html">Link Exercises </a>
+<a href="https://edwiuhgkud.github.io/Exercises/links.html">Link Exercises </a>
 </body>
 </html>
 <body>
