--- a/index.html
+++ b/index.html
@@ -18,3 +18,6 @@
 
 <img src="https://www.blog.google/static/blog/images/google-200x200.7714256da16f.png" alt="Google" width="50" height="60"
      
+<ul>
+   <li><a href="attributes.html">attributes.html</a></li>
+   <li><a href="headers.html"> Header Exercises</a><li>
