--- a/Exercises/links.html
+++ b/Exercises/links.html
@@ -3,25 +3,26 @@
 <title>HTML Tutorial</title>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
 
+<h1>Links</h1>
+<p>Home button</p>
 <a href="https://edwiuhgkud.github.io/">
-  <img src="https://www.blog.google/static/blog/images/google-200x200.7714256da16f.png" alt="Google" 
+  <img src="https://lh3.ggpht.com/A0x3jzuH1qRkE10HcTiT4qQr_6iAqVg-CTsoIqxnoIFyv92V91WI3KqiVlOvLtfoMRg=w300" alt="Home" 
+
        style="width:100px;height:100px;border:0;">
 <ul>
-  <li><a href="edwiuhgkud.github.io/Exercises/Links.html/">
-    <li><a href="edwiuhgkud.github.io/Exercises/Attributes.html"/></li>
-    <li><a href="edwiuhgkud.github.io/Exercises/Colors.html"/></li>
-    <li><a href="edwiuhgkud.github.io/Exercises/Comments.html"/></li>
-    <li><a href="edwiuhgkud.github.io/Exercises/Formatting.html/></li>
-      <li><a href="edwiuhgkud.github.io/Exercises/Headings.html/></li>
-    <li><a href="edwiuhgkud.github.io/Exercises/Images.html/></li>
-      <li><a href="edwiuhgkud.github.io/Exercises/Links.html/></li>
-    <li><a href="edwiuhgkud.github.io/Exercises/Lists.html/></li>
-      <li><a href="edwiuhgkud.github.io/Exercises/Paragraphs.html/></li>
-    <li><a href="edwiuhgkud.github.io/Exercises/Quotations.html/></li>
-      <li><a href="edwiuhgkud.github.io/Exercises/Styles.html/></li>
-    <li><a href="edwiuhgkud.github.io/Exercises/tables.html/></li>
-<ul>       
+    <li>a href="edwiuhgkud.github.io/Exercises/Links.html/">
+    <li>a href="edwiuhgkud.github.io/Exercises/Attributes.html"/</li>
+    <li>a href="edwiuhgkud.github.io/Exercises/Colors.html"/</li>
+    <li>a href="edwiuhgkud.github.io/Exercises/Comments.html"/</li>
+    <li>a href="edwiuhgkud.github.io/Exercises/Formatting.html/</li>
+    <li>a href="edwiuhgkud.github.io/Exercises/Headings.html/</li>
+    <li>a href="edwiuhgkud.github.io/Exercises/Images.html/</li>
+    <li>a href="edwiuhgkud.github.io/Exercises/Links.html/</li>
+    <li>a href="edwiuhgkud.github.io/Exercises/Lists.html/</li>
+    <li>a href="edwiuhgkud.github.io/Exercises/Paragraphs.html/</li>
+    <li>a href="edwiuhgkud.github.io/Exercises/Quotations.html/</li>
+    <li>a href="edwiuhgkud.github.io/Exercises/Styles.html/</li>
+    <li>a href="edwiuhgkud.github.io/Exercises/tables.html/</li>
+</ul>       
 </html>
