--- a/index.html
+++ b/index.html
@@ -4,21 +4,12 @@
 <body>
 
 <h1 style="background-color:powderblue;">My ECS Github Web Page</h1>
-<p style="color:red;">I love ECS!</p>
+<p style="color:red;">Hello!</p>
 
-<p style="border:2px solid Violet;">My name is Derek!</p>
-   <!--This is a comment -->
-   <p>This is<br>a paragraph<br>with line breaks.</p>
-   <!-- Comments are not displayed in the browser -->
+<p style="border:2px solid Blue;">My name is Derek!</p>
+
 
 <a href="https://edwiuhgkud.github.io/Exercises/links.html">Link Exercises </a>
 </body>
 </html>
-<body>
-
-<img src="https://www.blog.google/static/blog/images/google-200x200.7714256da16f.png" alt="Google" width="50" height="60"
-     
-<ul>
-   <li><a href="attributes.html">attributes.html</a></li>
-   <li><a href="headers.html"> Header Exercises</a><li>
-<ul>
+<body>"
