--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p style="border:2px solid Blue;">My name is Derek!</p>
 
 
-<a href="https://edwiuhgkud.github.io/Exercises/links.html">Link Exercises </a>
+<a href="edwiuhgkud.github.io/Exercises/Index.html">Link Exercises </a>
 </body>
 </html>
 <body>"
