--- a/Exercises/Index.html
+++ b/Exercises/Index.html
@@ -10,6 +10,9 @@
   <img src="https://lh3.ggpht.com/A0x3jzuH1qRkE10HcTiT4qQr_6iAqVg-CTsoIqxnoIFyv92V91WI3KqiVlOvLtfoMRg=w300" alt="Home" 
 
        style="width:100px;height:100px;border:0;">
+
+</html>
+<body>
 <ul>
     <li>a href="edwiuhgkud.github.io/Exercises/Links.html/">
     <li>a href="edwiuhgkud.github.io/Exercises/Attributes.html"/</li>
@@ -25,4 +28,4 @@
     <li>a href="edwiuhgkud.github.io/Exercises/Styles.html/</li>
     <li>a href="edwiuhgkud.github.io/Exercises/tables.html/</li>
 </ul>       
-</html>
+<body>
