--- a/Exercises/Index.html
+++ b/Exercises/Index.html
@@ -14,18 +14,18 @@
 </html>
 <body>
 <ul>
-    <li>a href="edwiuhgkud.github.io/Exercises/Links.html/">
-    <li>a href="edwiuhgkud.github.io/Exercises/Attributes.html"/</li>
-    <li>a href="edwiuhgkud.github.io/Exercises/Colors.html"/</li>
-    <li>a href="edwiuhgkud.github.io/Exercises/Comments.html"/</li>
-    <li>a href="edwiuhgkud.github.io/Exercises/Formatting.html/</li>
-    <li>a href="edwiuhgkud.github.io/Exercises/Headings.html/</li>
-    <li>a href="edwiuhgkud.github.io/Exercises/Images.html/</li>
-    <li>a href="edwiuhgkud.github.io/Exercises/Links.html/</li>
-    <li>a href="edwiuhgkud.github.io/Exercises/Lists.html/</li>
-    <li>a href="edwiuhgkud.github.io/Exercises/Paragraphs.html/</li>
-    <li>a href="edwiuhgkud.github.io/Exercises/Quotations.html/</li>
-    <li>a href="edwiuhgkud.github.io/Exercises/Styles.html/</li>
-    <li>a href="edwiuhgkud.github.io/Exercises/tables.html/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/Links.html/">
+    <li><a href="edwiuhgkud.github.io/Exercises/Attributes.html"/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/Colors.html"/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/Comments.html"/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/Formatting.html/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/Headings.html/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/Images.html/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/Links.html/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/Lists.html/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/Paragraphs.html/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/Quotations.html/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/Styles.html/</li>
+    <li><a href="edwiuhgkud.github.io/Exercises/tables.html/</li>
 </ul>       
 <body>
