--- a/Exercises/Index.html
+++ b/Exercises/Index.html
@@ -14,18 +14,18 @@
 </html>
 <body>
 <ul>
-    <li><a href="edwiuhgkud.github.io/Exercises/Links.html/">a href="edwiuhgkud.github.io/Exercises/Links.html
+  <li><a href="edwiuhgkud.github.io/Exercises/Links.html"/</li>edwiuhgkud.github.io/Exercises/Links.html
     <li><a href="edwiuhgkud.github.io/Exercises/Attributes.html"/</li>edwiuhgkud.github.io/Exercises/Attributes.html
-    <li><a href="edwiuhgkud.github.io/Exercises/Colors.html"/>a href="edwiuhgkud.github.io/Exercises/Colors.html 
-    <li><a href="edwiuhgkud.github.io/Exercises/Comments.html"/>a href="edwiuhgkud.github.io/Exercises/Comments.html
-    <li><a href="edwiuhgkud.github.io/Exercises/Formatting.html"/>a href="edwiuhgkud.github.io/Exercises/Formatting.html
-    <li><a href="edwiuhgkud.github.io/Exercises/Headings.html"/>a href="edwiuhgkud.github.io/Exercises/Headings.html
-    <li><a href="edwiuhgkud.github.io/Exercises/Images.html"/>a href="edwiuhgkud.github.io/Exercises/Images.html
-    <li><a href="edwiuhgkud.github.io/Exercises/Links.html"/>a href="edwiuhgkud.github.io/Exercises/Links.html
-    <li><a href="edwiuhgkud.github.io/Exercises/Lists.html"/>a href="edwiuhgkud.github.io/Exercises/Lists.html
-    <li><a href="edwiuhgkud.github.io/Exercises/Paragraphs.html"/>a href="edwiuhgkud.github.io/Exercises/Paragraphs.html
-    <li><a href="edwiuhgkud.github.io/Exercises/Quotations.html"/>a href="edwiuhgkud.github.io/Exercises/Quotations.html
-    <li><a href="edwiuhgkud.github.io/Exercises/Styles.html"/>a href="edwiuhgkud.github.io/Exercises/Styles.html
-    <li><a href="edwiuhgkud.github.io/Exercises/tables.html"/>a href="edwiuhgkud.github.io/Exercises/tables.html
+    <li><a href="edwiuhgkud.github.io/Exercises/Colors.html"/>edwiuhgkud.github.io/Exercises/Colors.html 
+    <li><a href="edwiuhgkud.github.io/Exercises/Comments.html"/>edwiuhgkud.github.io/Exercises/Comments.html
+    <li><a href="edwiuhgkud.github.io/Exercises/Formatting.html"/>edwiuhgkud.github.io/Exercises/Formatting.html
+    <li><a href="edwiuhgkud.github.io/Exercises/Headings.html"/>edwiuhgkud.github.io/Exercises/Headings.html
+    <li><a href="edwiuhgkud.github.io/Exercises/Images.html"/>edwiuhgkud.github.io/Exercises/Images.html
+    <li><a href="edwiuhgkud.github.io/Exercises/Links.html"/>edwiuhgkud.github.io/Exercises/Links.html
+    <li><a href="edwiuhgkud.github.io/Exercises/Lists.html"/>edwiuhgkud.github.io/Exercises/Lists.html
+    <li><a href="edwiuhgkud.github.io/Exercises/Paragraphs.html"/>edwiuhgkud.github.io/Exercises/Paragraphs.html
+    <li><a href="edwiuhgkud.github.io/Exercises/Quotations.html"/>edwiuhgkud.github.io/Exercises/Quotations.html
+    <li><a href="edwiuhgkud.github.io/Exercises/Styles.html"/>edwiuhgkud.github.io/Exercises/Styles.html
+    <li><a href="edwiuhgkud.github.io/Exercises/tables.html"/>edwiuhgkud.github.io/Exercises/tables.html
 </ul>       
 <body>
