--- a/Css-Exercises/Index.html
+++ b/Css-Exercises/Index.html
@@ -8,8 +8,24 @@
   </head>
   <body>
  
-  <h1>Heading</h1>
-  <p>Paragraph</p>
+  <h1>Css Exercises</h1>
   </body>
 </html>
+
+
+
+<h1> Links </h1>
+<p>Home button</p>
+<a href="https://edwiuhgkud.github.io/">
+  <img src="https://lh3.ggpht.com/A0x3jzuH1qRkE10HcTiT4qQr_6iAqVg-CTsoIqxnoIFyv92V91WI3KqiVlOvLtfoMRg=w300" alt="Home" 
+
+       style="width:100px;height:100px;border:0;">
+
+<body>
+<ul>
+<li><a href="edwiuhgkud.github.io/Css-Exercises/Selectors.html">Selectors</a></li>
+<li><a href="edwiuhgkud.github.io/Css-Exercises/styles.css">Styles</a></li>
+  
+
+
 
