--- a/Css-Exercises/Selectors.html
+++ b/Css-Exercises/Selectors.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="index.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+ 
+  <h1>Css Exercises</h1>
+  </body>
+</html>
+
+
+
+<h1> Links </h1>
+<p>Home button</p>
+<a href="https://edwiuhgkud.github.io/">
+  <img src="https://lh3.ggpht.com/A0x3jzuH1qRkE10HcTiT4qQr_6iAqVg-CTsoIqxnoIFyv92V91WI3KqiVlOvLtfoMRg=w300" alt="Home" 
+
+       style="width:100px;height:100px;border:0;">
+
+<body>
+<ul>
+<li><a href="edwiuhgkud.github.io/Css-Exercises/index.html">Selectors</a></li>
+<li><a href="edwiuhgkud.github.io/Css-Exercises/styles.css">Styles</a></li>
+  
 
