--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <a href="edwiuhgkud.github.io/Exercises/Index.html">Link Exercises </a>
-  <a href="edwiuhgkud.github.io/Css-Exercises/Selectors.html">Css Exercises </a>
+  <a href="edwiuhgkud.github.io/Css-Exercises/index.html">Css Exercises </a>
 </body>
 </html>
 <body>"
