--- a/css-exercises.html
+++ b/css-exercises.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>css exercises</title>
     <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -23,7 +23,7 @@
 
 <body>
 <ul>
-<li><a href="edwiuhgkud.github.io/Css-Exercises/index.html">Selectors</a></li>
+<li><a href="https://edwiuhgkud.github.io/Css-Exercises/Selector.html">Selectors</a></li>
 <li><a href="edwiuhgkud.github.io/Css-Exercises/styles.css">Styles</a></li>
   
 
