--- a/html-reference.html
+++ b/html-reference.html
@@ -2,6 +2,7 @@
 <html>
     <body>
       <head>
+            <link href="css-reference.css" type="text/css" rel="stylesheet">
              <h1>HTML Reference Sheet</h1>
         <table <p class="Table"></p>
   <tr>
