--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p style="border:2px solid Blue;">My name is Derek!</p>
 
 
-<a href="edwiuhgkud.github.io/Exercises/Index.html">Link Exercises </a>
+<a href="https://edwiuhgkud.github.io/exercises.html" </a>
   <a href="edwiuhgkud.github.io/Css-Exercises/index.html">Css Exercises </a>
   <a href="edwiuhgkud.github.io/HTML Reference Sheet">HTML Reference Sheet </a>
 </body>
