--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <a href="https://edwiuhgkud.github.io/exercises.html" </a>
-  <a href="edwiuhgkud.github.io/Css-Exercises/index.html">Css Exercises </a>
+  <a href="https://edwiuhgkud.github.io/css-exercises.html" </a>
   <a href="edwiuhgkud.github.io/HTML Reference Sheet">HTML Reference Sheet </a>
 </body>
 </html>
