--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <p style="border:2px solid Blue;">My name is Derek!</p>
 
 
-<a href="https://edwiuhgkud.github.io/exercises.html" </a>
-  <a href="https://edwiuhgkud.github.io/css-exercises.html" </a>
-  <a href="edwiuhgkud.github.io/HTML Reference Sheet">HTML Reference Sheet </a>
+<a href="https://edwiuhgkud.github.io/exercises.html </a>
+  <a href="https://edwiuhgkud.github.io/css-exercises.html </a>
 </body>
 </html>
 <body>"
