--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <p style="border:2px solid Blue;">My name is Derek!</p>
 
 
-<a href="https://edwiuhgkud.github.io/exercises.html </a>
-  <a href="https://edwiuhgkud.github.io/css-exercises.html </a>
+<a href="https://edwiuhgkud.github.io/exercises.html">Exercises</a> 
+  <a href="https://edwiuhgkud.github.io/css-exercises.html">CSS Exercises</a> 
 </body>
 </html>
 <body>"
-
-  
