--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <a href="https://edwiuhgkud.github.io/exercises.html">Exercises</a> 
   <a href="https://edwiuhgkud.github.io/css-exercises.html">CSS Exercises</a> 
+  <a href="https://edwiuhgkud.github.io/html-reference.html">Html-reference</a>
 </body>
 </html>
 <body>"
