--- a/html-reference.html
+++ b/html-reference.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <body>
+        <head>
+              <link href="css-reference.css" rel="stylesheet" type="text/css" />
+            <head>
              <h1>HTML Reference Sheet</h1>
         <table <p class="Table"></p>
   <tr>
