--- a/page4.html
+++ b/page4.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="topnav">
-  <a href="index.html">Home</a>
+  <a href="index2.html">Home</a>
   <a href="page1.html">Intro</a>
   <a href="page2.html">Heroes</a>
   <a href="page3.html">Items</a>
