--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <a href="https://edwiuhgkud.github.io/exercises.html">Exercises</a> 
   <a href="https://edwiuhgkud.github.io/css-exercises.html">CSS Exercises</a> 
   <a href="https://edwiuhgkud.github.io/html-reference.html">Html-reference</a>
+  <link rel="icon" href="/images/favicon.png">
+  <a href="https://edwiuhgkud.github.io/images/download.png">Favicon</a>
 </body>
 </html>
 <body>"
