--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="icon" href="/images/favicon.png">
+    <a href="https://edwiuhgkud.github.io/images/download.png"></a>
+    
+  </head>
 <title>My ECS Github Page</title>
 <body>
 
