--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="/images/favicon.png">
-    <a href="https://edwiuhgkud.github.io/images/download.png"></a>
+    <link rel="icon" href="edwiuhgkud.github.io/index.html">
     
   </head>
 <title>My ECS Github Page</title>
