--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="edwiuhgkud.github.io/index.html">
+    <link rel="icon" href="https://edwiuhgkud.github.io/images/download.png">
     
   </head>
 <title>My ECS Github Page</title>
