--- a/Responsive.html
+++ b/Responsive.html
@@ -9,7 +9,7 @@
   <body>
     <div>
       <img src='/images/sunset3-jpg-hq-1000.jpg'
-         srcset='https://edwiuhgkud.github.io/images/sunset2-jpg-maxq%202160.jpg,
+         srcset='/images/sunset2-jpg-maxq 2160.jpg,
                  /images/sunset2-jpg-maxq 3500.jpg,
                  /images/sunset2-jpg-maxq 4000.jpg,
                  /images/sunset2-jpg-maxq 720.jpg'>
