--- a/Responsive.html
+++ b/Responsive.html
@@ -9,7 +9,7 @@
   <body>
     <div>
       <img src='/images/sunset3-jpg-hq-1000.jpg'
-         srcset='https://edwiuhgkud.github.io/images/sunset2-jpg-maxq%202160.jpg,
+         srcset='/https://edwiuhgkud.github.io/images/sunset2-jpg-maxq%202160.jpg,
                  /https://edwiuhgkud.github.io/images/sunset2-jpg-maxq%20720.jpg,
                  /https://edwiuhgkud.github.io/images/sunset2-jpg-maxq%203500.jpg,
                  /https://edwiuhgkud.github.io/images/sunset2-jpg-maxq%204000.jpg'>
