--- a/Responsive.html
+++ b/Responsive.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div>
-      <img src='/images/sunset3-jpg-hq-1000.jpg'
-         srcset='/https://edwiuhgkud.github.io/images/sunset2-jpg-maxq%202160.jpg,
-                 /https://edwiuhgkud.github.io/images/sunset2-jpg-maxq%20720.jpg,
-                 /https://edwiuhgkud.github.io/images/sunset2-jpg-maxq%203500.jpg,
-                 /https://edwiuhgkud.github.io/images/sunset2-jpg-maxq%204000.jpg'>
+      <img src='/images/sunset2-jpg-maxq 720.jpg'
+         srcset='/images/sunset2-jpg-maxq 4000.jpg,
+                 /images/sunset2-jpg-maxq 3500.jpg,
+                 /images/sunset2-jpg-maxq 2160.jpg,
+                 /images/sunset2-jpg-maxq 720.jpg'>
     </div>
   </body>
 </html>
