--- a/Responsive.html
+++ b/Responsive.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div>
-      <img src='/images/sunset2-jpg-maxq 720.jpg'
-         srcset='/images/sunset2-jpg-maxq 4000.jpg,
-                 /images/sunset2-jpg-maxq 3500.jpg,
-                 /images/sunset2-jpg-maxq 2160.jpg,
-                 /images/sunset2-jpg-maxq 720.jpg'>
+      <img src='/images/sunset2-jpg-maxq 720.jpg 720W'
+         srcset='/images/sunset2-jpg-maxq 4000.jpg 4000W,
+                 /images/sunset2-jpg-maxq 3500.jpg 3500W,
+                 /images/sunset2-jpg-maxq 2160.jpg 2160W,
+                 /images/sunset2-jpg-maxq 720.jpg 720W'>
     </div>
   </body>
 </html>
