--- a/Responsive.html
+++ b/Responsive.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div>
-      <img src='/images/sunset2-jpg-maxq 720.jpg'
-         srcset='/images/sunset2-jpg-maxq 4000.jpg 4000w,
-                 /images/sunset2-jpg-maxq 3500.jpg 3500w,
-                 /images/sunset2-jpg-maxq 2160.jpg 2160w,
-                 /images/sunset2-jpg-maxq 720.jpg 720w'>
+<img src='/images/sunset3-jpg-hq-720.jpg'
+            srcset='/images/sunset3-jpg-hq-4000.jpg 5700w,
+            /images/sunset3-jpg-hq-3500.jpg 3500w,
+            /images/sunset3-jpg-hq-2160.jpg 2000w,
+            /images/sunset3-jpg-hq-720.jpg 1000w'>
     </div>
   </body>
 </html>
