--- a/Responsive.html
+++ b/Responsive.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>rimages</title>
+    <title>Responsive</title>
     <style> img { width:100%; } </style>
   </head>
   <body>
