--- a/Responsive.html
+++ b/Responsive.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Responsive</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>rimages</title>
     <style> img { width:100%; } </style>
   </head>
+  <body>
   <body>
     <div>
 <img src='/images/sunset2-jpg-maxq 720.jpg'
