--- a/Responsive.html
+++ b/Responsive.html
@@ -9,11 +9,11 @@
   <body>
   <body>
     <div>
-<img src='/images/sunset2-jpg-maxq 2160.jpg'
-            srcset='/sunset2-jpg-maxq 4000.jpg 4000w,
-            /images/sunset2-jpg-maxq 3500.jpg 3500w,
-            /images/sunset2-jpg-maxq 2160.jpg 2160w,
-            /images/sunset2-jpg-maxq 720.jpg 720w'>
+<img src='/images/sunset2-jpg-maxq%20720.jpg'
+            srcset='/sunset2-jpg-maxq%204000.jpg 4000w,
+            /images/sunset2-jpg-maxq%203500.jpg 3500w,
+            /images/sunset2-jpg-maxq%202160.jpg 2160w,
+            /images/sunset2-jpg-maxq%20720.jpg 720w'>
     </div>
   </body>
 </html>
